--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.16.3",
+    "html": "^1.0.0"
   },
   "engines": {
     "node": "4.0.0"
@@ -18,8 +19,6 @@
     "express"
   ],
   "author": "",
-  "contributors": [
-    
-  ],
+  "contributors": [],
   "license": ""
 }
